- Fixed bug #47903 ("@" operator does not work with string offsets (PHP_5_2 only!))   (MFH: #39018)