Zend/tests/bug39304.phpt
@@ -6,4 +6,6 @@ Bug #39304 (Segmentation fault with list unpacking of string offset)
   list($a, $b) = $s[0];
 ?>
 --EXPECTF--
-Fatal error: Cannot use string offset as an array in %sbug39304.php on line 3
+Notice: Uninitialized string offset: 0 in %s on line %d
+
+Fatal error: Cannot use string offset as an array in %sbug39304.php on line %d
